@@ -22,7 +22,7 @@ namespace scene
 
 	//! Special scene node animator for FPS cameras
 	/** This scene node animator can be attached to a camera to make it act
-	like a 3d modelling tool camera
+	like a 3d modeling tool camera
 	*/
 	class CSceneNodeAnimatorCameraMaya : public ISceneNodeAnimatorCameraMaya
 	{
@@ -87,6 +87,12 @@ namespace scene
 		(IReferenceCounted::drop()) the returned pointer after calling
 		this. */
 		virtual ISceneNodeAnimator* createClone(ISceneNode* node, ISceneManager* newManager=0) _IRR_OVERRIDE_;
+
+		//! Writes attributes of the scene node animator.
+		virtual void serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options=0) const _IRR_OVERRIDE_;
+
+		//! Reads attributes of the scene node animator.
+		virtual void deserializeAttributes(io::IAttributes* in, io::SAttributeReadWriteOptions* options=0) _IRR_OVERRIDE_;
 
 	private:
 
